# django-boilerplate

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/: ruff.yaml
.github/workflows/: lint.yaml  run-tests.yaml
app/: manage.py
app/app/: settings.py  urls.py
app/core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
app/core/migrations/: 0001_initial.py
app/core/templates/: index.html  login.html  password_change.html  register.html
app/static/css/: core.css
app/templates/: 400.html  403_csrf.html  404.html  500.html  base.html  navbar.html
config/: pytest.ini
config/dev/: Dockerfile.dev
config/development/: Dockerfile.dev.web  development.env
config/django/: asgi.py  celery.py  urls.py  wsgi.py
config/django/settings/: base.py  development.py  production.py  unfold.py
config/docker/: run.sh
config/docker/development/: Dockerfile.dev.web  development.env.example
config/docker/production/: Dockerfile.prod.web  entrypoint.prod.sh  production.env.example
config/dokku/: Procfile  app.json
config/env/: dev.env.dist
config/prod/: Dockerfile.prod  prod.env.example
config/production/: Dockerfile.prod.web
config/requirements/: requirements.in  requirements.txt
web/django/: manage.py
web/django/core/: admin.py  models.py  tests.py  urls.py  views.py
web/django/core/models/: user.py  (+1 more)
web/django/tailwindcss/: apps.py
web/django/templates/: _base.html  index.html
web/tailwind/: tailwind.config.js
(+4 files in other folders)
