[project]
requires-python = ">=3.12"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["B", "C4", "D", "DJ", "E", "EXE", "F", "FBT", "I", "ICN", "N", "RET", "S", "SIM", "UP", "W"]
extend-select = ["E501",]
ignore = ["D417", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/migrations/*.py" = ["E501", "FBT003"]
"config/django/settings/*.py" = ["F405", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "google"
